# MiniEngine2D

./: CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/include/framework/: Application.h
Engine/src/: main.cpp
Engine/src/framework/: Application.cpp
